2007-01-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version, finally.

2007-01-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (Script.__str__):  Write out --interpreter
	since that's what the parser expects (#222877).

	* pykickstart/commands/fc4.py:  Fix exception error messages.

2007-01-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseHandler.empty):  Add a method to
	empty out the contents of the commands dict.

	* pykickstart/commands/fc4.py (BaseHandler.Upgrade):  Only set upgrade
	if that's what the current command is.
	(BaseHandler.RootPw):  rootpw -> password

2007-01-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart/version.py (returnClassForVersion):  Take a default
	version argument.
	(returnClassForVersion):  Rename Version to Handler.

	* pykickstart/parser.py:  Rename kshandlers to handler.

	* pykickstart/commands/base.py:  Rename BaseVersion to BaseHandler,
	registerHandler to registerCommand, and self.dispatcher to
	self.handler.
	* pykickstart/commands/fc4.py:  Likewise.
	* pykickstart/commands/fc5.py:  Likewise.
	* pykickstart/commands/fc6.py:  Likewise.

2007-01-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseVersion.overrideHandler):  Provide
	a way to create a new instance of the handler and have it used.  This
	allows a shortcut for wiping out all the attributes on an instance.
	(BaseVersion.__str__):  Newline after the platform is written.

	* pykickstart/commands/base.py (KickstartCommand.__init__):  Add the
	dispatcher setting back in.

2007-01-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseVersion._insertSorted):  When a
	subclass of BaseVersion registers a handler that already exists from a
	class higher up the chain, remove the existing handler in favor of the
	new one.

	* pykickstart/commands/fc4.py:  Put writePriority defaults in the